fix hide on mobile , sections & blocks

--- a/client-side/src/app/components/section/section.component.scss
+++ b/client-side/src/app/components/section/section.component.scss
@@ -86,6 +86,23 @@
         }
     }
 
+    &.main-editor-state{
+        .mobile{
+            .hideBlock{
+                display: none;
+            }
+        }
+    }
+    &.editable-state{
+        .mobile{
+            .hideBlock{
+                display: block;
+            }
+        }
+    }
+
+
+
     // This css is run in edit mode and also without edit mode!!!
     .columns-wrapper {
         display: grid;
